--- a/package.json
+++ b/package.json
@@ -19,16 +19,18 @@
   },
   "homepage": "https://github.com/jonathanfmills/RestfulAPIS#readme",
   "dependencies": {
-    "body-parser": "^1.18.3",
-    "express": "^4.16.4",
-    "mongoose": "^5.3.13",
-    "nodemon": "^1.18.6"
+    "eslint-config-prettier": "^8.1.0",
+    "eslint-plugin-prettier": "^3.3.1",
+    "express": "^4.17.1",
+    "mongoose": "^5.12.3",
+    "nodemon": "^2.0.7",
+    "prettier": "^2.2.1"
   },
   "devDependencies": {
     "eslint": "^5.9.0",
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-import": "^2.14.0",
-    "mocha": "^5.2.0",
+    "mocha": "^8.3.2",
     "should": "^13.2.3",
     "sinon": "^7.2.2",
     "supertest": "^3.3.0"
