--- a/package.json
+++ b/package.json
@@ -19,14 +19,15 @@
   },
   "homepage": "https://github.com/jonathanfmills/RestfulAPIS#readme",
   "dependencies": {
-    "eslint-config-prettier": "^8.1.0",
-    "eslint-plugin-prettier": "^3.3.1",
     "express": "^4.17.1",
+    "joi": "^17.4.0",
     "mongoose": "^5.12.3",
-    "nodemon": "^2.0.7",
-    "prettier": "^2.2.1"
+    "nodemon": "^2.0.7"
   },
   "devDependencies": {
+    "eslint-config-prettier": "^8.1.0",
+    "prettier": "^2.2.1",
+    "eslint-plugin-prettier": "^3.3.1",
     "eslint": "^5.9.0",
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-import": "^2.14.0",
