--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -26,7 +26,7 @@
         ],
         "env": {
             "NODE_ENV": "development",
-            "PORT": 4000
+            "PORT": "4000"
         },
         "sourceMaps": false,
 
